# Streamlit_Projects

./: .gitattributes  .gitignore  Cleaned_Wine_df.plk  Flight_Prediction.py  Flight_prediction.py  Homepage.py  README.md  Spam-Project.py  Spam_Prediction.py  Wine_Prediction.py  Wine_model.pkl  Wine_pred.py  YanellyHernandez.py  pyproject.toml  requirements.txt  setup.py
DataSets/: DataSets
Flight Model Notebooks/: Airlinetrain.ipynb
Spam Model Notebooks/: SMS-Collect-DS-CountVect.ipynb  SMS-Collect-DS-TFIDF.ipynb  SMS-Collect-DS-glove.ipynb
Wine Model Notebooks/: wine-ntlk-streamlit.ipynb
pickled_data/: Cleaned_Wine_df.plk  Eval_Metrics_Flight.pkl  Evaluation_Metrics_Spam.pkl  Evaluation_Metrics_Wine.pkl  Spam_Model.pkl  Wine_model.pkl  pickled_data  tfidf_Vectorizer_Spam.pkl  tfidf_Vectorizer_Wine.pkl  xgb_pipeline_Flight.pkl
