[tool.poetry]
name = "my-streamlit-app"  # You can replace with your app name
version = "0.1.0"
description = "Portfolio showcasing Yanelly's projects and skills"
authors = ["Yanelly <y35879597@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"  # Set the Python version you want (e.g., 3.8, 3.9)
streamlit = "^1.14.0"
pandas = "1.3.3"
scikit-learn = "1.0.2"
joblib = "1.1.0"
plotly = "5.0.0"
gdown = "4.0.0"
xgboost = "1.7.6"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
